# infrastructure

./: .eslintrc  .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: build-and-cache-rust-tooling.yml  build-compare-dnas-integrity.yaml  build-nix-devshells.yaml  build-replace-npm-dependencies-sources.yml  build-scaffold-remote-zome.yml  build-sync-npm-git-dependencies-with-nix.yml  build-zome-wasm-hash.yaml  github-build-and-deploy-rocket-action.yml  test-nix.yml  update-flake-inputs.yml
crates/add_flake_input/: Cargo.toml
crates/add_flake_input/fixture/: flake.nix
crates/add_flake_input/src/: lib.rs
crates/add_npm_dependency/: Cargo.toml
crates/add_npm_dependency/src/: lib.rs
crates/compare_dnas_integrity/: Cargo.toml  default.nix
crates/compare_dnas_integrity/src/: main.rs
crates/dna_hash/: Cargo.toml  default.nix
crates/dna_hash/src/: main.rs
crates/file_tree_utils/: Cargo.toml
crates/file_tree_utils/src/: lib.rs
crates/holochain_scaffolding_utils/: Cargo.toml
crates/holochain_scaffolding_utils/src/: lib.rs
crates/hrl/: Cargo.toml
crates/hrl/src/: lib.rs
crates/nix_scaffolding_utils/: Cargo.toml
crates/nix_scaffolding_utils/fixture/: flake.nix
crates/nix_scaffolding_utils/src/: lib.rs
crates/npm_scaffolding_utils/: Cargo.toml
crates/npm_scaffolding_utils/fixture/: package.json
crates/npm_scaffolding_utils/src/: lib.rs
crates/replace-npm-dependencies-sources/: Cargo.toml
crates/replace-npm-dependencies-sources/fixture/: package.json
crates/replace-npm-dependencies-sources/src/: main.rs
crates/rust_scaffolding_utils/: Cargo.toml
crates/rust_scaffolding_utils/src/: lib.rs
crates/scaffold_remote_zome/: Cargo.toml  default.nix
crates/scaffold_remote_zome/fixture/: dna.nix  dna.yaml  flake.nix
crates/scaffold_remote_zome/src/: lib.rs
crates/sync-npm-dependencies-with-nix/: Cargo.toml
crates/sync-npm-dependencies-with-nix/src/: main.rs
crates/sync-npm-git-dependencies-with-nix/: Cargo.toml
crates/sync-npm-git-dependencies-with-nix/fixture/: flake.nix  package.json
crates/sync-npm-git-dependencies-with-nix/src/: main.rs
crates/sync_npm_git_dependencies_with_nix/: Cargo.toml  default.nix
crates/sync_npm_git_dependencies_with_nix/fixture/: flake.nix
crates/sync_npm_git_dependencies_with_nix/src/: lib.rs
crates/templates_scaffolding_utils/: Cargo.toml
crates/templates_scaffolding_utils/src/: lib.rs
crates/templates_scaffolding_utils/src/helpers/: merge.rs
crates/zome_wasm_hash/: Cargo.toml  default.nix
crates/zome_wasm_hash/src/: main.rs
nix/: buildDepsOnlyWithArtifacts.nix  builders-option.nix  configureCargoVendoredDepsHook.sh  dependencies-option.nix  deterministic-zome.nix  dna.nix  happ.nix  import-yaml.nix  inheritCargoArtifacts.sh  npm-package.nix  rustc-wrapper.sh  sweettest.nix  ui-package.nix  vendored-sources-config.toml  zome.nix
nix/fixture/: Cargo.toml  dna.nix  flake.nix  happ.nix  happ.yaml  package-lock.json  package.json  result
nix/fixture/zome/: Cargo.toml  package.json  zome.nix
nix/fixture/zome/src/: lib.rs
nix/fixtures/: .package-lock.json
nix/fixtures/app-repo/: flake.nix  package-lock.json  package.json
nix/fixtures/app-repo/app/: happ.nix  index.js  package.json
nix/fixtures/app-repo/happ/: happ.nix  happ.yaml
nix/fixtures/app-repo/ui/: index.js  package.json
nix/fixtures/module-repo/: Cargo.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  s.sh
nix/fixtures/module-repo/module/: package.json  ui.nix
nix/fixtures/module-repo/ui/: index.js  package.json
nix/fixtures/module-repo/zome/: Cargo.toml  zome.nix
nix/fixtures/module-repo/zome/src/: lib.rs
nix/fixtures/module-repo/zome/tests/: sample.rs
nix/fixtures/module-repo/zomes/coordinator/: Cargo.toml  zome.nix
nix/fixtures/module-repo/zomes/integrity/: Cargo.toml  zome.nix
nix/fixtures/module-repo/zomes/integrity/src/: lib.rs
nix/fixtures/service-repo/: flake.nix  package.json
nix/fixtures/service-repo/dna/: dna.nix  dna.yaml
nix/fixtures/service-repo/service/: dna.nix  package.json
nix/fixtures/service-repo/ui/: index.js  package.json
nix/reference-happ/: Cargo.toml
nix/reference-happ/src/: lib.rs
nix/reference-happ/zome/: Cargo.toml
nix/reference-happ/zome/tests/: sample.rs
sites/stores/: README.md  index.html  package.json  vite.config.ts
stores/: index.html
stores/assets/: index-1490a141.css  index-76db6b81.css
