[workspace]
members = ["crates/*"]
exclude = [
  "nix/reference-happ",
  "nix/fixtures/module-repo",
  "nix/fixtures/module-repo/zome",
]
resolver = "2"

[workspace.dependencies]
hdk = "0.4.0-dev"
hdi = "0.5.0-dev"
holochain = "0.4.0-dev"
holo_hash = "0.4.0-dev"
holochain_types = "0.4.0-dev"
mr_bundle = "0.4.0-dev"
