[package]
name = "replace-npm-dependencies-sources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = {version ="4.5.2", features = ["derive"]}
ignore = "0.4"
serde_json = {version ="1", features = ["std", "preserve_order"]}
serde = "1"
