[package]
name = "scaffold_remote_zome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scaffold_remote_zome"
path = "src/lib.rs"

[[bin]]
name = "scaffold-remote-zome"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.81"
ignore = "0.4"
serde_json = {version ="1", features = ["std", "preserve_order"]}
serde_yaml = "^0.9"
serde = "1"
clap = {version = "4.5.4", features = ["derive"]}
nix_scaffolding_utils = { path = "../nix_scaffolding_utils" }
file_tree_utils = { path = "../file_tree_utils" }
sync_npm_git_dependencies_with_nix = { path = "../sync_npm_git_dependencies_with_nix" }
npm_scaffolding_utils= { path = "../npm_scaffolding_utils" }
thiserror = "1"
build-fs-tree = "0.4"
regex = "1.10.4"
path-clean = "1"
dialoguer = "0.11"
colored = "2.1.0"
holochain_types = "0.3.1"
