[package]
name = "sync-npm-git-dependencies-with-nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
parse-flake-lock = { git = "https://github.com/DeterminateSystems/flake-checker", branch = "main" }
ignore = "0.4"
serde_json = {version ="1", features = ["std", "preserve_order"]}
serde = "1"
regex = "1"
