[package]
name = "zome_wasm_hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zome-wasm-hash"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.3", features = ["full"] }

holochain_types = { workspace = true }
