[package]
name = "zome"
version ="0.3.2"
edition = "2021"

[dependencies]
hdk = "0.3.2"

[lib]
crate-type = ["cdylib", "rlib"]
name = "my_zome"

[dev-dependencies]
fixt = "0.3.2"
futures = { version = "0.3", default-features = false }
hdk = { version = "0.3.2", features = ["encoding", "test_utils"] }
holochain = { version = "0.3.2", features = ["test_utils"] }
