[package]
name = "my_zome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "my_zome"

[dependencies]
hdk = { workspace = true }
serde = "1"
my_zome_integrity = { path = "../integrity" }

[dev-dependencies]
fixt = "0.3.2"
futures = { version = "0.3", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true, features = ["test_utils"] }
tokio = { version = "1.3", features = ["full"] }
